syntax = "proto3";
package reshock;

service Reshock {
  rpc DumpState(Empty) returns (StateDumpResponse);
  rpc ProcessCommand(CommandRequest) returns (EventsResponse);
}

message Empty {}

message PlayerComponent {}
message WallComponent {}
message RoomComponent {}
message DoorComponent {
  bool open = 1;
}
message RenderableComponent {
  enum Renderable {
    NONE = 0;
    HUMAN = 1;
    SERV_BOT = 2;
    FLOOR = 3;
    WALL = 4;
    DOOR = 5;
  }
  Renderable renderable = 1;
}
message ObstacleComponent {
  bool obstacle = 1;
}
message OrderingComponent {
  enum Ordering {
    FLOOR = 0;
    DOOR = 1;
    WALL = 2;
    OTHER = 3;
  }
  Ordering ordering = 1;
}
message PositionComponent {
  int32 x = 1;
  int32 y = 2;
}
message SightComponent {
  enum SightKind {
    BLIND = 0;
    OMNISCIENCE = 1;
    EYES = 2;
  }

  SightKind kind = 1;
  repeated uint32 seeing = 2;
}
message MemoryComponent {
  repeated RememberedEntity entities = 1;
}
message OpaqueComponent {
  bool opaque = 1;
}
message AiComponent {
  enum AiKind {
    NONE = 0;
    SERV_BOT = 1;
  }

  AiKind ai = 1;
}

message RememberedEntity {
  uint32 entity = 1;
  RenderableComponent renderable = 2;
  PositionComponent position = 3;
  OrderingComponent ordering = 4;
}

message Entity {
  uint32 entity = 1;
  optional PlayerComponent player = 2;
  optional WallComponent wall = 3;
  optional RoomComponent room = 4;
  optional DoorComponent door = 5;
  optional RenderableComponent renderable = 6;
  optional ObstacleComponent obstacle = 7;
  optional OrderingComponent ordering = 8;
  optional PositionComponent position = 9;
  optional SightComponent sight = 10;
  optional MemoryComponent memory = 11;
  optional OpaqueComponent opaque = 12;
  optional AiComponent ai = 13;
}

message StateDumpResponse {
  repeated Entity entities = 1;
}

message CommandRequest {
  enum Command {
    UP_LEFT = 0;
    UP = 1;
    UP_RIGHT = 2;
    RIGHT = 3;
    DOWN_RIGHT = 4;
    DOWN = 5;
    DOWN_LEFT = 6;
    LEFT = 7;
  }
  Command command = 1;
}

message EventsResponse {
  string value = 1;
}
